--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <a href="#" class="header_logo-link">@design_buddy</a>
     <nav class="nav">
-      <a href="#cases" class="nav_link--first">our cases</a>
+      <a href="/cases" class="nav_link--first">our cases</a>
       <ul class="nav_list">
         <li class="nav_item">
           <a href="#services" class="nav_link">services</a>
